# meshtastic-menubar

./: .editorconfig  .gitignore  Makefile  README.md  config.yml  meshtastic-menubar.5m.py  meshtastic-menubar.5m.sh  meshtastic-menubar.py  pyproject.toml  requirements.txt  test_meshtastic_menubar.py
src/meshtastic_menubar/: __init__.py  __main__.py  cli.py  command_line.py  device.py  menu.py  util.py
