[project]
name = "meshtastic_menubar"
authors = [
    {name = "elwarren", email = "elwarren@yahoo.com"}
]
maintainers = [
    {name = "elwarren", email = "elwarren@yahoo.com"}
]
description = "Query a Meshtastic device and show discovered nodes in the menubar on macOS and linux."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GPLv3"
]
dynamic = ["version"]

[project.urls]
Home = "https://github.com/elwarren/meshtastic-menubar"

[project.scripts]
meshtastic-menubar = "meshtastic_menubar:command_line"
